# codex-asset-forge

./: .gitignore  NOTICE.md  README.md  pyproject.toml
docs/: codex-asset-pipeline-fde-blog-draft.md  codex-asset-pipeline-portfolio-inventory.md  index.html
examples/: README.md
examples/agentforge-starter/: manifest.json  qc.json
examples/agentforge-starter/atlas/: collision.json  enemy_slime.json  fx.json  player.json  props.json  scene-hooks.json  tileset.json
examples/bone-trail-voxel-prepass/cleanup/: cleanup-manifest.json
examples/bone-trail-voxel-prepass/preview/: tile_warp_gate_01__voxel_turnaround_report.md
examples/claudecraft-r020/: proof.json
src/codex_asset_forge/: __init__.py  chroma.py  cli.py  grid.py  manifest.py  preview.py  qa.py
tests/: test_pipeline.py
